# firefly

./: .clang_complete  .gitignore  .syntastic_c_config  Makefile  Makefile.old  TODO  TODO.txt  celebrate.sh  doxygen.cfg  event_priorities.txt  firefly_sample.lc  notes.txt
cli/: celebrate.sh  pthreads.supp  test.sh
cmake_modules/: FindCUnit.cmake  FindLabComm.cmake  FindRTNet.cmake  FindXenomai.cmake
doc/: INFO  INSTALL  PROTOCOL  README  README.dox  README.md  concept-slides.xcf  doxygen.cfg  doxygen_template.cfg  howto  index_template.dox
firefly_protocol/include/: firefly_protocol.h  serenity_protocol.h
firefly_protocol/src/: ariel_protocol.c  serenity_protocol.c
firefly_protocol/src/test/: labcomm_test_decoder.c  labcomm_test_encoder.c  test_simple.c
img/: logo.xcf
include/: ariel_protocol.h  firefly_errors.h  firefly_protocol.h
include/eventqueue/: firefly_event_queue.h
include/protocol/: firefly_protocol.h
include/transport/: firefly_transport.h  firefly_transport_eth_lwip.h  firefly_transport_eth_posix.h  firefly_transport_eth_stellaris.h  firefly_transport_eth_xeno.h  firefly_transport_tcp_posix.h  firefly_transport_udp_lwip.h  firefly_transport_udp_posix.h
include/utils/: firefly_errors.h  firefly_event_queue.h  firefly_event_queue_posix.h  firefly_event_queue_vx.h  firefly_event_queue_xeno.h
lc/: firefly_protocol.lc  pingpong.lc  test.lc
src/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-vxworks.cmake  ariel_protocol.c  firefly_errors.c
src/csharp/: Firefly.csproj
src/csharp/example/: SimpleExample.cs  SimpleExample.csproj  SimpleExampleUDP.cs  SimpleExampleUDP.csproj
src/csharp/se/lth/cs/firefly/: FireflyChannel.cs  FireflyConnection.cs  UDPStream.cs
src/eventqueue/: event_queue.c  event_queue.h  firefly_event_queue.c  firefly_event_queue_private.h
src/java/: .gitignore  TODO.txt  build.xml
src/java/example/: AbstractPingPong.java  Debug.java  Example.java  Ping.java  Pong.java
src/java/se/lth/cs/firefly/: ActionQueue.java  AppendableInputStream.java  Channel.java  ChannelDecoder.java  ChannelEncoder.java  Connection.java  ConnectionDecoder.java  ConnectionEncoder.java  Debug.java  FireflyApplication.java  FireflyConnection.java  FireflyServer.java  Main.java  ResendQueue.java  TCPConnection.java  TCPConnectionMultiplexer.java  UDPConnection.java
src/java/se/lth/cs/firefly/protocol/: Channel.java  ChannelDecoder.java  ChannelEncoder.java  Connection.java  ConnectionDecoder.java  ConnectionEncoder.java  FireflyApplication.java  LinkLayerPort.java  ProtocolException.java  TransportLayerAbstraction.java  TypeList.java
src/java/se/lth/cs/firefly/transport/: Connection.java  ConnectionDecoder.java  ConnectionEncoder.java  TCPConnection.java  TCPConnectionMultiplexer.java  TCPLayer.java  UDPConnectionMultiplexer.java  UDPLayer.java
src/java/se/lth/cs/firefly/util/: ActionQueue.java  AppendableByteArrayInputStream.java  AppendableInputStream.java  BlockingAppendableInputStream.java  Debug.java  ReplaceableByteArrayInputStream.java  ResendQueue.java  TransportLayerAbstraction.java  UserType.java
src/protocol/: CMakeLists.txt  firefly_protocol.c  firefly_protocol_channel.c  firefly_protocol_connection.c  firefly_protocol_labcomm.c  firefly_protocol_memory.c  firefly_protocol_private.h
src/test/: CMakeLists.txt  create_lc_files.c  error_helper.c  error_helper.h  event_helper.c  event_helper.h  labcomm_static_buffer_reader.c  labcomm_static_buffer_reader.h  labcomm_static_buffer_writer.c  labcomm_static_buffer_writer.h  proto_helper.c  proto_helper.h  test_ariel.c  test_event_main.c  test_labcomm_utils.c  test_labcomm_utils.h  test_llp_udp_posix.c  test_llp_udp_posix.lc  test_proto_chan.c  test_proto_chan.h  test_proto_conn.c  test_proto_conn.h  test_proto_errors.c  test_proto_errors.h  test_proto_important.c  test_proto_important.h  test_proto_labcomm.c  test_proto_labcomm.h  test_proto_memman.c  test_proto_protolc.c  test_proto_protolc.h  test_proto_translc.c  test_proto_translc.h  test_protocol.c  test_protocol_main.c  test_resend_posix.c  test_resend_posix.h  test_transport.c  test_transport.h  test_transport_eth_posix.c  (+9 more)
src/test/ft-sense/: client.c
src/test/pingpong/: hack_lctypes.c  hack_lctypes.h  ping_eth_xeno.c  ping_peth.c  ping_peth.h  ping_pmulti.c  ping_ptcp.c  ping_ptcp.h  ping_pudp.c  ping_pudp.h  pingpong.c  pingpong.h  pingpong_eth_xeno.c  pingpong_eth_xeno.h  pingpong_main.c  pingpong_main_tcp.c  pingpong_peth.c  pingpong_peth.h  pingpong_ptcp.c  pingpong_ptcp.h  pingpong_pudp.c  pingpong_pudp.h  pong_eth_xeno.c  pong_peth.c  pong_peth.h  pong_pmulti.c  pong_pmulti.h  pong_ptcp.c  pong_ptcp.h  pong_pudp.c  pong_pudp.h
src/test/system/: udp_posix.c
src/transport/: .firefly_transport_udp_posix.c.swo  CMakeLists.txt  firefly_transport.c  firefly_transport_eth_lwip.c  firefly_transport_eth_lwip_private.h  firefly_transport_eth_posix.c  firefly_transport_eth_posix_private.h  firefly_transport_eth_stellaris.c  firefly_transport_eth_stellaris_private.h  firefly_transport_eth_xeno.c  firefly_transport_eth_xeno_private.h  firefly_transport_private.h  firefly_transport_resend_posix.c  firefly_transport_resend_posix.h  firefly_transport_tcp_posix.c  firefly_transport_tcp_posix_private.h  firefly_transport_udp_lwip.c  firefly_transport_udp_lwip_private.h  firefly_transport_udp_posix.c  firefly_transport_udp_posix_private.h
src/utils/: CMakeLists.txt  cppmacros.h  firefly_errors.c  firefly_errors_utils.c  firefly_event_queue.c  firefly_event_queue_posix.c  firefly_event_queue_private.h  firefly_event_queue_vx.c  firefly_event_queue_xeno.c  firefly_resend_posix.c  firefly_resend_posix.h  firefly_resend_vx.c  firefly_resend_vx.h
test_xeno/: Makefile  test.c
